# py2smt

./: '  .pre-commit-config.yaml  1.z3  2.z3  README.md  pylsp-mypy.cfg  pyproject.toml  test.z3
py2smt/: __init__.py  __main__.py  annotation.py  check.py  exceptions.py  main.py  visitor.py
py2smt/hir/: __init__.py  lower.py  types.py
py2smt/lir/: __init__.py  lower.py
py2smt/mir/: __init__.py  lower.py  types.py
tests/: conftest.py  test_assignment.py  test_ast_to_hir.py  test_integration.py  test_scopes.py  test_smt.py  test_visitor.py
tests/integration/: arithmatic_1_correct.py  arithmatic_2_correct.py  arithmatic_3_incorrect.py  assign_correct.py  assign_incorrect.py  expr_sideeffect_1_correct.py  expr_sideeffect_1_incorrect.py  function_1_correct.py  function_1_incorrect.py  function_2_correct.py  function_3_correct.py  if_correct.py  if_incorrect.py  loop_1_correct.py  loop_2_correct.py  loop_nested_correct.py
