[tool.poetry]
name = "py2smt"
version = "0.1.0"
description = ""
authors = ["Jesse Bakker <github@jessebakker.com>"]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
z3-solver = "^4.8.14"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
